<resources>
    <string name ="app_name">Ayur</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome User</string>
    <string name="nav_header_subtitle">Ayur Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
        <string name="user_name">User Name</string>
        <string name="user_name_hint">user name</string>
        <string name="password">Password</string>
        <string name="password_hint">password</string>
        <string name="remember_me">Remember Me</string>
        <string name="remember_me_hint">remember me</string>
        <string name="forgot_password">Forgot Password?</string>
        <string name="forgot_password_hint">forgot password</string>
        <string name="login">LOGIN</string>
        <string name="login_hint">login</string>
        <string name="dont_have_account">Do not have an account yet?</string>
        <string name="dont_have_account_hint">Do not have an account yet?</string>
        <string name="sign_up">Sign Up</string>
        <string name="sign_up_hint">sign up?</string>
        <string name="sign_in">Sign-In</string>
        <string name="sign_in_hint">sign in</string>
        <string name="member_type">Member Type *</string>
        <string name="member_type_hint">member type</string>
        <string name="channel_doctor">Channel Doctor</string>
        <string name="channel_doc_hint">channel doctor</string>
        <string name="doctor_name">Doctor Name</string>
        <string name="doc_name">Doctor Name</string>
        <string name="specialization">Specialization</string>
        <string name="specialization_hint">Specialization</string>
        <string name="date">Date</string>
        <string name="date_hint">Date</string>
        <string name="search">Search</string>
        <string name="search_hint">search</string>
        <string name="channel_now">Channel Now</string>
        <string name="channel_now_hint">channel now</string>
        <string name="mandatory">*</string>
        <string name="mandatory_hint">*</string>
        <string name="title">Title *</string>
        <string name="title_hint">title</string>
        <string name="fname">First Name *</string>
        <string name="fgname_hint">First Name</string>
        <string name="lname">Last Name *</string>
        <string name="lgname_hint">Last Name</string>
        <string name="email">Email</string>
        <string name="email_hint">Email</string>
        <string name="country">Country</string>
        <string name="country_hint">Country</string>
        <string name="id">NIC/Passport *</string>
        <string name="id_hint">NIC/Passport</string>
        <string name="dob">Date of Birth</string>
        <string name="dob_hint">Date of Birth</string>
        <string name="address">Address</string>
        <string name="address_hint">Address</string>
        <string name="mobile">Mobile *</string>
        <string name="mobile_hint">Mobile</string>
        <string name="emgname">Emergency-Name *</string>
        <string name="emgname_hint">Emergency-Name</string>
        <string name="emgphone">Emergency-Phone *</string>
        <string name="emgphone_hint">Emergency-Phone</string>
        <string name="notificationmethod">Notification Method</string>
        <string name="notification_hint">Notification Method</string>
        <string name="notificationmethodemail">Email</string>
        <string name="notificationemail_hint">Email</string>
        <string name="notificationmethodsms">SMS</string>
        <string name="notificationsms_hint">SMS</string>
        <string name="passwordreg">Password *</string>
        <string name="passwordreg_hint">Password *</string>
        <string name="passwordconreg">Confirm Password *</string>
        <string name="passwordconreg_hint">Confirm Password *</string>
        <string name="submitbtn">Submit</string>
        <string name="submitbtn_hint">Submit</string>
        <string name="cancelbtn">Cancel</string>
        <string name="cancelbtn_hint">Cancel</string>
        <string name="holidaybtn">Holiday</string>
        <string name="holidaybtn_hint">Holiday</string>
        <string name="fullbtn">Full</string>
        <string name="fullbtn_hint">Full</string>
        <string name="available">Available</string>
        <string name="available_hint">Available</string>
        <string name="nofeild">No</string>
        <string name="no_hint">No</string>
        <string name="time">Time</string>
        <string name="time_hint">Time</string>
        <string name="member">Member</string>
        <string name="member_hint">Member</string>
        <string name="yes">Yes</string>
        <string name="yes_hint">Yes</string>
        <string name="docnotifi">Doctor Notification</string>
        <string name="docnotifi_hint">Doctor Notification</string>
        <string name="patientname">Patient Name *</string>
        <string name="patientname_hint">Patient Name</string>
        <string name="patienttitle">Patient Title *</string>
        <string name="patienttitle_hint">Patient Title *</string>
        <string name="area">Area</string>
        <string name="area_hint">Closet city</string>
        <string name="nationality">Nationality</string>
        <string name="nationality_hint">Nationality</string>
        <string name="local">Local</string>
        <string name="local_hint">Local</string>
        <string name="foreign">Foreign</string>
        <string name="foreign_hint">Foreign</string>
        <string name="accpet">I Accept the</string>
        <string name="accept_hint">accpet</string>
        <string name="terms">terms and conditions</string>
        <string name="terms_hint">terms</string>
        <string name="channel">Channel</string>
        <string name="channel_hint">channel</string>
        <string name="patientdetails">Patient Details</string>
        <string name="patientdetails_hint">Patient Details</string>
        <string name="appdetails">Appointment Details</string>
        <string name="appdetails_hint">Appointment Details</string>
        <string name="paydetails">Payment Details</string>
        <string name="paydetails_hint">Payment Details</string>
        <string name="fee">EChanneling Fee</string>
        <string name="fee_hint">EChanneling Fee</string>
        <string name="totalfee">Total Fee</string>
        <string name="totalfee_hint">Total Fee</string>
        <string name="paymentmethod">Payment Method</string>
        <string name="paymentmethod_hint">Payment Method</string>
        <string name="pay">Pay</string>
        <string name="pay_hint">Pay</string>
        <string name="old_password">Old Password</string>
        <string name="opassword_hint">Old Password</string>
        <string name="new_password">New Password</string>
        <string name="npassword_hint">New Password</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="cpassword_hint">Confirm Password</string>
        <string name="changebtn">Change</string>
        <string name="changebtn_hint">Change</string>
        <string name="druglocatorname">Drug Locator Name</string>
        <string name="druglocatorname_hint">Drug Locator Name</string>
        <string name="contactdetails">Contact Details</string>
        <string name="contactdetails_hint">Contact Details</string>
        <string name="treatmenttype">Treatment Type</string>
        <string name="treatmenttype_hint">Treatment Type</string>
        <string name="treatmentdescription">Treatment Description</string>
        <string name="treatmentdescription_hint">Treatment Description</string>
        <string name="treatmentsearchbtn">Treatments</string>
        <string name="treatmentdescription_hint2">Treatment Description</string>
        <string name="druglocatorsbtn">Drug Locators</string>
        <string name="druglocators_hint2">Drug Locators</string>
        <string name="title_activity_navigation">Navigation</string>
        <string name="welcome">Welcome To Ayur</string>
    
    <string-array name="docname">
        <item>Dr.Yasas Perera</item>
        <item>Dr.Kumari Jayathilake</item>
    </string-array>

    <string-array name="title">
        <item>Mr</item>
        <item>Miss</item>
        <item>Mrs</item>
    </string-array>


</resources>
