<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/hm_signin3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/sign_in_hint"
        android:background="@drawable/button_background"
        android:hint="@string/sign_in_hint"
        android:text="@string/sign_in" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="367dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/password_hint"
        android:ems="10"
        android:hint="@string/opassword_hint"
        android:inputType="textPassword"
        android:text="@string/password" />

    <EditText
        android:id="@+id/log_password3"
        android:layout_width="367dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="19dp"
        android:autofillHints="@string/password_hint"
        android:ems="10"
        android:hint="@string/opassword_hint"
        android:inputType="textPassword"
        android:text="@string/password" />

    <EditText
        android:id="@+id/log_password4"
        android:layout_width="367dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="382dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/password_hint"
        android:ems="10"
        android:hint="@string/opassword_hint"
        android:inputType="textPassword"
        android:text="@string/password" />

    <Button
        android:id="@+id/log_loginbtn"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="@string/login_hint"
        android:background="@drawable/buttonserch"
        android:hint="@string/login_hint"
        android:text="@string/changebtn" />

    <Button
        android:id="@+id/channel_details_channel_btn"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="99dp"
        android:autofillHints="@string/login_hint"
        android:background="@drawable/buttonserch"
        android:hint="@string/login_hint"
        android:text="@string/cancelbtn" />

    <TextView
        android:id="@+id/hm_docname2"
        android:layout_width="191dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="-127dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="@string/old_password"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hm_docname3"
        android:layout_width="191dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="-127dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="New Password"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hm_docname4"
        android:layout_width="191dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="-127dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="Confirm Password"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>