<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".home">


    <Button
        android:id="@+id/hm_signin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/sign_in_hint"
        android:background="@android:color/darker_gray"
        android:hint="@string/sign_in_hint"
        android:visibility="invisible"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/hm_channDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="58dp"
        android:autofillHints="@string/channel_doc_hint"
        android:hint="@string/channel_doc_hint"
        android:text="@string/channel_doctor"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hm_docname"
        android:layout_width="191dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="-127dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="@string/doctor_name"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hm_docname_spinner"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="136dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/hm_spec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="205dp"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="@string/specialization"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hm_spe_spinner"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="204dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/hm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="327dp"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <CalendarView
        android:id="@+id/hm_calendarView"
        android:layout_width="219dp"
        android:layout_height="194dp"
        android:layout_alignEnd="@+id/hm_spe_spinner"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-24dp"
        android:layout_marginBottom="186dp" />

    <Button
        android:id="@+id/hm_searchbtn"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/hm_docname_spinner"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="142dp"
        android:autofillHints="@string/doc_name"
        android:background="@color/design_default_color_primary_dark"
        android:hint="@string/doc_name"
        android:text="@string/search"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/doctorList"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-54dp"
        android:layout_marginBottom="-1dp"
        android:layout_weight="1.86" />



</RelativeLayout>