<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:visibility="visible"
    tools:context=".home">


    <Button
        android:id="@+id/hm_signin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/sign_in_hint"
        android:background="@android:color/darker_gray"
        android:hint="@string/sign_in_hint"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/hm_docname"
        android:layout_width="253dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="-159dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="Area"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hm_docname_spinner"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="188dp"
        android:layout_marginTop="80dp"
        android:spinnerMode="dropdown" />


    <Button
        android:id="@+id/hm_searchbtn"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/hm_docname_spinner"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-30dp"
        android:layout_marginBottom="428dp"
        android:autofillHints="@string/doc_name"
        android:background="@color/design_default_color_primary_dark"
        android:hint="@string/doc_name"
        android:text="@string/search"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="387dp"
        android:layout_height="446dp"
        android:layout_below="@id/treat"
        android:layout_marginTop="163dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="Drug Locator Name                                                           " />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@id/hm_searchbtn"
        />
</RelativeLayout>