<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:visibility="visible"
    tools:context=".home">


    <Button
        android:id="@+id/hm_signin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="@string/sign_in_hint"
        android:background="@android:color/darker_gray"
        android:hint="@string/sign_in_hint"
        android:visibility="invisible"
        android:text="@string/sign_in" />




    <TextView
        android:id="@+id/treat"
        android:layout_width="253dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="-159dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="Name"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/treat2"
        android:layout_width="253dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="-159dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="Email"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/treat3"
        android:layout_width="253dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="-159dp"
        android:layout_toStartOf="@+id/hm_channDoc"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"
        android:text="Message"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/treat"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/treat"
        android:layout_marginTop="113dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/treat"
        android:layout_marginTop="237dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/hm_searchbtn"
        android:layout_width="429dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText4"
        android:layout_marginStart="-18dp"
        android:layout_marginTop="259dp"
        android:layout_marginBottom="272dp"
        android:autofillHints="@string/doc_name"
        android:background="@color/design_default_color_primary_dark"
        android:hint="@string/doc_name"
        android:text="Send Email"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />


</RelativeLayout>